auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aut
  labels:
    app: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: krishnauprit/auth
        ports:
        - containerPort: 5000
