gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 2
  selector: 
    matchLabels:  # Corrected field name
      app: gateway
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 3
  template: 
    metadata:
      labels:
        app: gateway
    spec:
      containers: 
        - name: gateway
          image: krishnauprit/gateway
